# llama-cpp-energy

./: .gitignore  CMakeLists.txt  Makefile  README.md  atten_microbench.cpp  b.sh  build.sh  create_csv.sh  get_model_info.py  intel_spr_log.txt  microbench.py
docs/: build.md
examples/batched-bench/: CMakeLists.txt  batched-bench.cpp
ggml/src/: ggml-backend.c  ggml.c
include/: llama.h
lib/: CMakeLists.txt  timing.cpp
src/: llama.cpp
